# tsz

./: .cursorrules  .gitignore  LICENSE  README.md  TODO  build.zig  build.zig.zon
examples/: async-await.tsz  conditions.tsz  destructuring.tsz  enum.tsz  export-import.tsz  for.tsz  functions.tsz  hello-world.tsz  jsx.tsz  loops.tsz  match.tsz  member-expressions.tsz  pipeline.tsz  results.tsz  strings.tsz  structs.tsz  switch.tsz  type-cast.tsz  type-of.tsz  types.tsz  variables.tsz  while.tsz
tree-sitter-tsz/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  biome.json  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-tsz.wasm  tree-sitter-typescript.LICENSE  tree-sitter.json  tsz.dylib
tree-sitter-tsz/bindings/c/: tree-sitter-tsz.pc.in
tree-sitter-tsz/bindings/go/: binding.go  binding_test.go
tree-sitter-tsz/bindings/node/: binding.cc  index.js
tree-sitter-tsz/bindings/python/tests/: test_binding.py
tree-sitter-tsz/bindings/python/tree_sitter_tsz/: __init__.py  binding.c
tree-sitter-tsz/bindings/rust/: build.rs  lib.rs
tree-sitter-tsz/bindings/swift/TreeSitterTSZ/: tsz.h
tree-sitter-tsz/bindings/swift/TreeSitterTSZTests/: TreeSitterTSZTests.swift
tree-sitter-tsz/bindings/zig/: root.zig
tree-sitter-tsz/src/: grammar.json  node-types.json  parser.c  scanner.c
