[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-tsz"
description = "Toy language which transpiles to TS/JS"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "tsz"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Alexander Schumacher" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/story75/tsz"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
